kubernetes/apps/observability/victorialogs/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: victoria-logs
    app.kubernetes.io/name: victoria-logs
    app.kubernetes.io/part-of: victoria-logs
  name: victoria-logs-server
spec:
  hostnames:
    - val.kantai.xyz
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: victoria-logs-server
          port: 80
